# ha-amazon-kids

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
amazonkids/: __init__.py  client.py
custom_components/amazon_kids/: __init__.py  button.py  config_flow.py  const.py  manifest.json  number.py  runtime.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/amazon_kids/amazonkids/: __init__.py  client.py
custom_components/amazon_kids/translations/: en.json
